--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^20.8.2",
     "rollup": "^4.0.0",
+    "rollup-plugin-esbuild": "^6.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "tslib": "^2.6.2"
   }
 }
